refactor: replaced get(0) with getFirs()